# QtTools

./: CMakeLists.txt  README.md
Browser/: QtTools.h  qtpropertybrowser.h  qttreepropertybrowser.h  qtvariantproperty.h
QTWinMigrate/: qmfcapp.cpp  qmfcapp.h  qwinhost.cpp  qwinhost.h  qwinwidget.cpp  qwinwidget.h
